--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ span[class*=__text-2] {
         width: 100%;
         height: 100%;
         background-color: #5cc5c4;
-        background-image: url(../images/logo.svg), url(../images/img_1.png);
+        background-image: url(../images/logo.svg), url(../images/img_1.jpg);
         background-position: 2% 2%, 50% 50%;
         background-repeat: no-repeat;
         background-size: 12vw auto, cover;
@@ -214,7 +214,7 @@ span[class*=__text-2] {
         width: 100%;
         height: 100%;
         background-color: #e3e8e4;
-        background-image: url(../images/logo.svg), url(../images/img_2.png);
+        background-image: url(../images/logo.svg), url(../images/img_2.jpg);
         background-position: 98% 2%, 50% 50%;
         background-repeat: no-repeat;
         background-size: 15vw auto, cover;
@@ -277,7 +277,7 @@ span[class*=__text-2] {
         width: 100%;
         height: 100%;
         background-color: #e3e8e4;
-        background-image: url(../images/logo_white.svg), url(../images/img_3.png);
+        background-image: url(../images/logo_white.svg), url(../images/img_3.jpg);
         background-position: 98% 2%, 50% 50%;
         background-repeat: no-repeat;
         background-size: 15vw auto, cover;
@@ -344,7 +344,7 @@ span[class*=__text-2] {
         width: 100%;
         height: 100%;
         background-color: #e3e8e4;
-        background-image: url(../images/logo_white.svg), url(../images/img_4.png);
+        background-image: url(../images/logo_white.svg), url(../images/img_4.jpg);
         background-position: 98% 2%, 50% 50%;
         background-repeat: no-repeat;
         background-size: 15vw auto, cover;
@@ -410,7 +410,7 @@ span[class*=__text-2] {
         width: 100%;
         height: 100%;
         background-color: #e3e8e4;
-        background-image: url(../images/logo_white.svg), url(../images/img_5.png);
+        background-image: url(../images/logo_white.svg), url(../images/img_5.jpg);
         background-position: 98% 2%, 50% 50%;
         background-repeat: no-repeat;
         background-size: 15vw auto, cover;
@@ -474,7 +474,7 @@ span[class*=__text-2] {
         width: 100%;
         height: 100%;
         background-color: #e3e8e4;
-        background-image: url(../images/logo.svg), url(../images/img_6.png);
+        background-image: url(../images/logo.svg), url(../images/img_6.jpg);
         background-position: 98% 2%, 50% 50%;
         background-repeat: no-repeat;
         background-size: 15vw auto, cover;
@@ -539,7 +539,7 @@ span[class*=__text-2] {
         width: 100%;
         height: 100%;
         background-color: #e3e8e4;
-        background-image: url(../images/logo.svg), url(../images/img_7.png);
+        background-image: url(../images/logo.svg), url(../images/img_7.jpg);
         background-position: 98% 2%, 50% 50%;
         background-repeat: no-repeat;
         background-size: 15vw auto, cover;
@@ -605,7 +605,7 @@ span[class*=__text-2] {
         width: 100%;
         height: 100%;
         background-color: #e3e8e4;
-        background-image: url(../images/logo.svg), url(../images/img_8.png);
+        background-image: url(../images/logo.svg), url(../images/img_8.jpg);
         background-position: 98% 2%, 50% 50%;
         background-repeat: no-repeat;
         background-size: 15vw auto, cover;
@@ -670,7 +670,7 @@ span[class*=__text-2] {
         width: 100%;
         height: 100%;
         background-color: #e3e8e4;
-        background-image: url(../images/logo_white.svg), url(../images/img_9.png);
+        background-image: url(../images/logo_white.svg), url(../images/img_9.jpg);
         background-position: 98% 2%, 50% 50%;
         background-repeat: no-repeat;
         background-size: 15vw auto, cover;
@@ -735,7 +735,7 @@ span[class*=__text-2] {
         width: 100%;
         height: 100%;
         background-color: #e3e8e4;
-        background-image: url(../images/logo.svg), url(../images/img_10.png);
+        background-image: url(../images/logo.svg), url(../images/img_10.jpg);
         background-position: 98% 2%, 50% 50%;
         background-repeat: no-repeat;
         background-size: 15vw auto, cover;
@@ -747,7 +747,7 @@ span[class*=__text-2] {
         text-align: left;
         background-color: #56595b;
         background-clip: content-box;
-        /*background-image: url(../images/img_10-1.png);*/
+        /*background-image: url(../images/img_10-1.jpg);*/
         background-position: 100% 100%;
         background-repeat: no-repeat;
         background-size: contain;
@@ -805,7 +805,7 @@ span[class*=__text-2] {
         width: 100%;
         height: 100%;
         background-color: #e3e8e4;
-        background-image: url(../images/logo.svg), url(../images/img_10.png);
+        background-image: url(../images/logo.svg), url(../images/img_10.jpg);
         background-position: 98% 2%, 50% 50%;
         background-repeat: no-repeat;
         background-size: 15vw auto, cover;
